# todolog

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: conftest.py  pyproject.toml  test_parser.py  todolog.toml
todolog/: __init__.py  decorator.py  parser.py
