[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "todolog"
authors = [{name = "qu3vipon", email = "qu3vipon@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version", "description"]
keywords = ["todo", "log", "todolog"]
dependencies = [
    "tomli",
]
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
test = [
	"pytest",
]

[project.urls]
Home = "https://github.com/qu3vipon/todolog"
